# thauten

./: .gitignore  README.md  fidelity_attractor.py  holoware_env.py  log.py  prompts.py  pyproject.toml  pytest.ini  train_compressor.py
.cursor/rules/: base.mdc
docs/: cognitive-function-excavation.md  compressor.md  framework.md  future.md  ideas.md
hol/: code-compressor.hol  compressor-teacher.hol  compressor.hol  eco.hol  eco.mermaid  genesis.hol  meta_cognitive_architect.hol  self_forcing_compressor.hol  semiodynamics.hol  specialization.hol
prompts/: cognition_compression.txt  cognition_decompression.txt  compression.txt  compressor.hol  compressor.txt  decompression.txt  emergent_language.hol  evaluation.txt  freeform_compression.txt  freeform_decompression.txt  identity_compression.txt  identity_decompression.txt  structured_compression.txt  structured_decompression.txt
tests/: test_holoware_parse.py
thauten/: fidelity_attractor.py
