[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "datasets>=3.6.0",
 "reasoning-gym>=0.1.20",
 "rich>=14.0.0",
 "torch",
 "verifiers>=0.1.0",
 "ruff",
]

[tool.setuptools]
py-modules = ["main", "prompts", "train-compressor"]

[tool.ruff]
lint.ignore = ["F541"]
