[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "openai",
 "transformers",
 "vllm",
 "datasets>=3.6.0",
 "reasoning-gym>=0.1.20",
 "rich>=14.0.0",
 "torch>=2.6.0",
 "ruff",
 "rich",
 "pytest"
]

[tool.setuptools]
py-modules = ["main", "prompts", "train-compressor"]

[tool.ruff]
lint.ignore = ["F541"]
